# moescraper

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 00_quickstart.py
src/moescraper/: __init__.py  client.py
src/moescraper/adapters/: __init__.py  anime_pictures.py  base.py  danbooru.py  demo.py  safebooru.py  zerochan.py
src/moescraper/core/: batch_scrape.py  downloader.py  filters.py  http.py  metadata.py  models.py  rate_limit.py  retry.py  utils.py  writers.py
src/moescraper/nsfw/: types.py
tests/: test_import.py
